<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/randomRecipesFragment"
        android:enabled="true"
        android:icon="@drawable/menu"
        android:title="@string/recipes"/>
    <item
        android:id="@+id/bookMarkedFragment"
        android:enabled="true"
        android:icon="@drawable/bookmark__2_"
        android:title="@string/bookmark"/>


<!--    <item-->
<!--        android:id="@+id/page_4"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/add"-->
<!--        android:title="@string/your_recipes"/>-->
<!--    <item-->
<!--        android:id="@+id/groceriesFragment"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_baseline_shopping_basket_24"-->
<!--        android:title="@string/groceries"/>-->

</menu>