<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userViewmodel"
            type="com.example.tabkati.ui.recipes.UserInfoViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/profile"
        android:textColor="@color/light_black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_user_name"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="27dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"

        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="360dp"
            android:text="@{userViewmodel.profileUIState.name.toString()}"
            android:layout_height="80dp"
            android:hint="@string/name"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="27dp"
        android:enabled="false"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_email"
            android:layout_width="360dp"
            android:text="@{userViewmodel.profileUIState.email.toString()}"
            android:layout_height="80dp"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/save" />

</LinearLayout>
    </ScrollView>


</layout>