<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.tabkati.ui.login.LoginViewModel" />
        <variable
            name="signUpFragment"
            type="com.example.tabkati.ui.login.SignUpFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/wafel"
            tools:context=".ui.login.SignUpFragment">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/blackTransparent60"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/RegisterTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="148dp"
                        android:layout_marginTop="112dp"
                        android:layout_marginEnd="148dp"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/personNameText"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        app:endIconMode="custom"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/RegisterTextView">

                        <com.google.android.material.textfield.TextInputEditText
                            style="Widget.regestr.TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"


                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextTextEmailAddressSignup"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:text="@string/email_address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/personNameText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_address"

                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextTextPasswordSignUp"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:inputType="numberPassword"
                        android:minHeight="48dp"
                        app:endIconMode="password_toggle"
                        app:helperTextEnabled="true"
                        app:helperText="@string/PasswordHelperText"
                        app:helperTextTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressSignup">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="numberPassword"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/signup"
                        android:layout_width="350dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/sign_up"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordSignUp" />

                    <TextView
                        android:id="@+id/loginLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="140dp"
                        android:onClick="@{()-> signUpFragment.goToLoginFragment()}"
                        android:text="@string/already_signup_login"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/signup"
                        app:layout_constraintVertical_bias="0.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>