<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.tabkati.ui.login.AuthViewModel" />
        <variable
            name="loginFragment"
            type="com.example.tabkati.ui.login.LoginFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wafel">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginFragment">




            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/blackTransparent60"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="727dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/loginTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="148dp"
                        android:layout_marginTop="90dp"
                        android:layout_marginEnd="148dp"
                        android:text="@string/loginText"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextTextEmailAddressLogin"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="90dp"
                        android:layout_marginEnd="30dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:text="@string/email_address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/loginTextView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="380dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_address"

                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextTextPasswordLogin"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="31dp"
                        android:ems="10"
                        android:inputType="numberPassword"
                        android:minHeight="48dp"
                        app:endIconMode="password_toggle"
                        app:helperText="@string/PasswordHelperText"
                        app:helperTextEnabled="true"
                        app:helperTextTextColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressLogin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="numberPassword"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="350dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="140dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/loginText"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordLogin" />

                    <TextView
                        android:id="@+id/signup_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="25dp"
                        android:onClick="@{()-> loginFragment.goToSignUpFragment()}"
                        android:text="@string/don_t_have_an_account_sign_up"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/loginButton"
                        app:layout_constraintVertical_bias="0.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>